feat: add update quiz endpont
