# backend/src/main/java/no/ntnu/fullstack/backend/quiz/QuizController.java
@@ -7,6 +7,7 @@ import lombok.RequiredArgsConstructor;
 import no.ntnu.fullstack.backend.quiz.dto.QuizCreateDTO;
 import no.ntnu.fullstack.backend.quiz.dto.QuizDTO;
 import no.ntnu.fullstack.backend.quiz.dto.QuizOverviewDTO;
+import no.ntnu.fullstack.backend.quiz.exception.QuizNotFoundException;
 import no.ntnu.fullstack.backend.quiz.mapper.QuizMapper;
 import no.ntnu.fullstack.backend.quiz.mapper.RevisionMapper;
 import no.ntnu.fullstack.backend.quiz.model.Quiz;
@@ -23,6 +24,7 @@ import org.springframework.web.bind.annotation.*;
 @RequiredArgsConstructor
 public class QuizController {
   private final QuizService quizService;
+  private final RevisionService revisionService;
   private final QuizMapper quizMapper = Mappers.getMapper(QuizMapper.class);
   private final RevisionMapper revisionMapper = Mappers.getMapper(RevisionMapper.class);
 
@@ -63,5 +65,22 @@ public class QuizController {
     }
 
     return ResponseEntity.ok(quizMapper.toQuizDTO(quiz.getQuiz(), quiz.getLatestRevision()));
+  }
+
+  @PutMapping("/{id}")
+  @ResponseBody
+  public ResponseEntity<QuizDTO> updateQuiz(
+      @PathVariable UUID id, @Valid @RequestBody QuizCreateDTO update)
+      throws QuizNotFoundException {
+    QuizWithRevision quiz = quizService.getLatestQuiz(id).orElse(null);
+    if (quiz == null) {
+      return ResponseEntity.notFound().build();
+    }
+
+    Revision revision =
+        revisionMapper.fromQuizCreate(update, quiz.getLatestRevision().getCreator());
+    revision.setQuestions(quiz.getLatestRevision().getQuestions());
+    Revision newRevision = revisionService.newRevision(id, revision);
+    return ResponseEntity.ok(quizMapper.toQuizDTO(quiz.getQuiz(), newRevision));
   }
 }
